<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.CheckoutActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimation"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvSuccessMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/confetti"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSuccessMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_successful"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/lottieAnimation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Order Successful!" />

    <TextView
        android:id="@+id/tvThankYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:textSize="18sp"
        android:textColor="#666666"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvSuccessMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Thank you for your purchase" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinueShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_shopping"
        android:layout_marginTop="48dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvThankYou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

